--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
-    "expo": "~51.0.0",
+    "date-fns": "^4.1.0",
+    "expo": "~52.0.0",
+    "expo-datepicker": "^1.0.23",
     "expo-status-bar": "^1.7.1",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.73.7",
+    "react-native-paper": "^5.14.5",
+    "react-native-paper-dates": "^0.22.46"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
